--- a/linux/Kconfig
+++ b/linux/Kconfig
@@ -4,20 +4,13 @@ config LINUX
 	package
 	default y
 
-config KARCH
-	string
-	default "arm" if ARCH_ARM
-	default "blackfin" if ARCH_BLACKFIN
-	default "nios2" if ARCH_NIOS2
-	default "powerpc" if ARCH_POWERPC_32 || ARCH_POWERPC_64
-	default "x86" if ARCH_X86_32 || ARCH_X86_64
-
 config KCC
 	string "Linux kernel compiler"
 	default "$(CC)"
 
 config LINUX_SRCDIR
 	srcdir "Sources directory"
+	default "linux-*"
 
 config LINUX_DEFCONFIG
 	string "Configuration file"
