--- a/busybox/Makefile
+++ b/busybox/Makefile
@@ -4,14 +4,13 @@ else
 not-defconfig:=y
 endif
 
-CROSS_COMPILE := $(shell expr $(CC) : '\(.*\)gcc')
 board-config = $(srctree)/boards/$(MKR_BOARD)/$(MKR_BUSYBOX_CONFIG)
 defconfig-$(defconfig) = $(MAKE) $(configargs) defconfig
 defconfig-$(not-defconfig) = cp $(board-defconfig)
 
 # Configuring busybox
 configargs := V=$(KBUILD_VERBOSE) -C $(mkr-srcdir) O=$(CURDIR) \
-	CC="$(CC)" CXX="$(CXX)" LD="$(CC) -nostdlib" AR="$(CROSS_COMPILE)ar" \
+	CC="$(CC)" CXX="$(CXX)" LD="$(CC) -nostdlib" AR="$(mkr-cross)ar" \
 	EXTRA_CFLAGS="$(ARCH_FLAGS)" \
 	EXTRA_LDFLAGS="$(ARCH_FLAGS)" \
 	CROSS_COMPILE="$(shell expr $(CC) : '\(.*\)gcc')" \
