--- a/Kconfig
+++ b/Kconfig
@@ -14,6 +14,7 @@ source "base/Kconfig"
 source "linux/Kconfig"
 source "busybox/Kconfig"
 source "strace/Kconfig"
+source "xenomai/Kconfig"
 source "netcat/Kconfig"
 
 endmenu
