Use install -o 0 instead of cp, in order to set copied file ownership to root

--- a/base/Makefile
+++ b/base/Makefile
@@ -13,23 +13,22 @@ DIRS= \
 
 # Installing stuff
 devices:
-	 $(mkr-pkgdir)/mkdevices.sh $(MKR_STAGING) < $(dev_txt)
+	 $(mkr-pkgdir)/mkdevices.sh "$(MKR_STAGING)" < $(dev_txt)
 
 dirs:
-	for d in $(DIRS); do mkdir -p $(MKR_STAGING)/$$d; done
-	chmod a+rwx+t $(MKR_STAGING)/tmp
+	for d in $(DIRS); do mkdir -p "$(MKR_STAGING)/$$d"; done
+	chmod a+rwx+t "$(MKR_STAGING)/tmp"
 
 skel:
 	cd $(skeldir) && { \
 		find . -! -type d | while read f; do { \
-			mkdir -p $(MKR_STAGING)/`dirname $$f`; \
-			cp -a $$f $(MKR_STAGING)/$$f; \
+			install -D -o 0 $$f "$(MKR_STAGING)/$$f"; \
 			sed -i \
 			's/@MKR_SERIAL_DEV@/'$(MKR_SERIAL_DEV)'/g;s/@MKR_SERIAL_BAUDRATE@/$(MKR_SERIAL_BAUDRATE)/g' \
-		$(MKR_STAGING)/$$f; \
+		"$(MKR_STAGING)/$$f"; \
 		}; \
 		done; \
-		cp -a /etc/localtime $(MKR_STAGING)/etc/localtime || :; \
+		install -o 0 /etc/localtime "$(MKR_STAGING)/etc/localtime" || :; \
 	}
 
 staging: devices dirs skel
