--- a/base/Makefile
+++ b/base/Makefile
@@ -13,25 +13,26 @@ DIRS= \
 
 # Installing stuff
 devices:
-	 $(mkr-pkgdir)/mkdevices.sh "$(MKR_STAGING)" < $(dev_txt)
+	$(mkr-fakeroot) $(mkr-pkgdir)/mkdevices.sh "$(MKR_STAGING)" < $(dev_txt)
 
-dirs:
+# FIXME: needs fakeroot
+dirs: devices
 	for d in $(DIRS); do mkdir -p "$(MKR_STAGING)/$$d"; done
 	chmod a+rwx+t "$(MKR_STAGING)/tmp"
 
-skel:
+skel: dirs
 	cd $(skeldir) && { \
 		find . -! -type d | while read f; do { \
-			install -D -o 0 $$f "$(MKR_STAGING)/$$f"; \
+			$(mkr-install) -D $$f "$(MKR_STAGING)/$$f"; \
 			sed -i \
 			's/@MKR_SERIAL_DEV@/'$(MKR_SERIAL_DEV)'/g;s/@MKR_SERIAL_BAUDRATE@/$(MKR_SERIAL_BAUDRATE)/g' \
 		"$(MKR_STAGING)/$$f"; \
 		}; \
 		done; \
-		install -o 0 /etc/localtime "$(MKR_STAGING)/etc/localtime" || :; \
+		$(mkr-install) -D /etc/localtime "$(MKR_STAGING)/etc/localtime" || :; \
 	}
 
-staging: devices dirs skel
+staging: skel
 
 # Checking configuration
 confcheck-y := $(call confcheck-exists,$(dev_txt),MKR_BOARD)
