--- a/build-tools/Makefile.pkgbuild
+++ b/build-tools/Makefile.pkgbuild
@@ -54,7 +54,7 @@ $(error No Makefile or Kbuild for package $(obj))
 endif
 
 .mkr.makefile.deps: $(mkr-pkgmk)
-	$(Q)$(AWK) -f $(srctree)/scripts/makefile-deps.awk $< > $@ || rm -f $@
+	$(Q)$(AWK) -f $(srctree)/build-tools/makefile-deps.awk $< > $@ || rm -f $@
 
 -include .mkr.makefile.deps
 
